--- a/package.json
+++ b/package.json
@@ -1,11 +1,30 @@
 {
-  "name": "dataset.js",
+  "name": "dataset-cache",
   "version": "1.0.0",
-  "description": "A common API for your data",
+  "description": "A solution for downloading and caching datasets",
   "main": "index.js",
+  "bin": "cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/index.js",
+    "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
+    "lint": "standard"
   },
   "author": "alantrrs",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "debug": "^2.2.0",
+    "gunzip-maybe": "^1.3.1",
+    "hash-then": "^1.0.0",
+    "mkdirp": "^0.5.1",
+    "mz": "^2.1.0",
+    "node-fetch": "^1.3.3",
+    "path": "^0.12.7",
+    "shortid": "^2.2.6",
+    "tar-fs": "^1.12.0"
+  },
+  "devDependencies": {
+    "istanbul": "^0.4.3",
+    "mocha": "^2.3.3",
+    "standard": "^5.3.1"
+  }
 }
