--- a/package.json
+++ b/package.json
@@ -4,8 +4,14 @@
   "description": "A common API for your data",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run lint",
+    "lint": "standard"
   },
   "author": "alantrrs",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "fetch-node": "0.0.1",
+    "mz": "^2.1.0",
+    "standard": "^5.3.1"
+  }
 }
