--- a/package.json
+++ b/package.json
@@ -1,22 +1,26 @@
 {
   "name": "dataset.js",
   "version": "1.0.0",
-  "description": "A common API for your data",
+  "description": "A solution for downloading and caching datasets",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint && mocha test/index.js",
+    "test": "mocha test/index.js",
+    "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
+    "check": "checksum ./*",
     "lint": "standard"
   },
   "author": "alantrrs",
   "license": "MIT",
   "dependencies": {
-    "fetch-node": "0.0.1",
+    "checksum": "^0.1.1",
     "md5": "^2.0.0",
     "mkdirp": "^0.5.1",
     "mz": "^2.1.0",
+    "node-fetch": "^1.3.3",
     "standard": "^5.3.1"
   },
   "devDependencies": {
+    "istanbul": "^0.4.3",
     "mocha": "^2.3.3"
   }
 }
