--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   "license": "MIT",
   "dependencies": {
     "checksum": "^0.1.1",
-    "md5": "^2.0.0",
     "mkdirp": "^0.5.1",
     "mz": "^2.1.0",
     "node-fetch": "^1.3.3",
-    "standard": "^5.3.1"
+    "path": "^0.12.7",
+    "shortid": "^2.2.6"
   },
   "devDependencies": {
     "istanbul": "^0.4.3",
-    "mocha": "^2.3.3"
+    "mocha": "^2.3.3",
+    "standard": "^5.3.1"
   }
 }
