--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "MIT",
   "dependencies": {
     "checksum": "^0.1.1",
+    "debug": "^2.2.0",
+    "gunzip-maybe": "^1.3.1",
     "mkdirp": "^0.5.1",
     "mz": "^2.1.0",
     "node-fetch": "^1.3.3",
     "path": "^0.12.7",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "tar-fs": "^1.12.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.3",
