--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "mocha test/index.js",
     "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
