--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
+  "bin": "cli.js",
   "scripts": {
     "test": "mocha test/index.js",
     "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
@@ -13,11 +14,14 @@
   "license": "MIT",
   "dependencies": {
     "checksum": "^0.1.1",
+    "debug": "^2.2.0",
+    "gunzip-maybe": "^1.3.1",
     "mkdirp": "^0.5.1",
     "mz": "^2.1.0",
     "node-fetch": "^1.3.3",
     "path": "^0.12.7",
-    "shortid": "^2.2.6"
+    "shortid": "^2.2.6",
+    "tar-fs": "^1.12.0"
   },
   "devDependencies": {
     "istanbul": "^0.4.3",
