--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dataset.js",
+  "name": "dataset-cache",
   "version": "1.0.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
