--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dataset.js",
+  "name": "dataset-cache",
   "version": "1.0.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
@@ -7,15 +7,14 @@
   "scripts": {
     "test": "mocha test/index.js",
     "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
-    "check": "checksum ./*",
     "lint": "standard"
   },
   "author": "alantrrs",
   "license": "MIT",
   "dependencies": {
-    "checksum": "^0.1.1",
     "debug": "^2.2.0",
     "gunzip-maybe": "^1.3.1",
+    "hash-then": "^1.0.0",
     "mkdirp": "^0.5.1",
     "mz": "^2.1.0",
     "node-fetch": "^1.3.3",
