--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "debug": "^2.2.0",
+    "decompress": "^4.0.0",
     "gunzip-maybe": "^1.3.1",
     "hash-then": "^1.0.0",
     "mkdirp": "^0.5.1",
