--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,10 +17,7 @@ services:
       - .:/home/app
       - /tmp:/tmp
   test:
-    image: node
+    image: dataset-cache
     entrypoint: npm test
-    working_dir: /home/app
     environment:
       - DEBUG=$DEBUG
-    volumes:
-      - .:/home/app
