--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
-  "bin": "cli.js",
+  "bin": {
+    "dataset": "cli.js"
+  },
   "scripts": {
     "test": "mocha test/index.js",
     "test-cov": "istanbul cover _mocha -- -u exports -R spec test/index.js",
@@ -20,6 +22,7 @@
     "mz": "^2.1.0",
     "node-fetch": "^1.3.3",
     "path": "^0.12.7",
+    "progress": "^1.1.8",
     "shortid": "^2.2.6",
     "tar-fs": "^1.12.0"
   },
