--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dataset-cache",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "A solution for downloading and caching datasets",
   "main": "index.js",
   "bin": {
@@ -23,6 +23,7 @@
     "node-fetch": "^1.3.3",
     "path": "^0.12.7",
     "progress": "^1.1.8",
+    "rimraf": "^2.5.2",
     "shortid": "^2.2.6",
     "tar-fs": "^1.12.0"
   },
